<?xml version="1.0"?>
<package>
  <name>thinc_sim_msgs</name>
  <version>0.0.0</version>
  <description>
	thinc_sim_msgs contains message form for thinc_sim_gazebo_plugins.
     	This package is based on hector_uav_msgs by Stefan Kohlbrecher, TU Darmstadt.
  </description>
  <maintainer email="elliot@todo.todo">elliot</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
