<?xml version="1.0"?>
<package>
  <name>thinc_simulator</name>
  <version>0.0.0</version>
  <description>The thinc_simulator</description>
  <maintainer email="kbogert@uga.edu">Kenneth Bogert</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>thinc_sim_msgs</run_depend>
  <run_depend>thinc_sim_gazebo</run_depend>
  <run_depend>thinc_sim_gazebo_plugins</run_depend>
  <run_depend>thinc_message_to_tf</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
